cmake_minimum_required(VERSION 3.18)

include_directories("/usr/local/systemc-2.3.3/include/")
include_directories("/usr/local/systemc-ams-2.3/include/")

link_directories("/usr/local/systemc-2.3.3/lib-linux64/")
link_directories("/usr/local/systemc-ams-2.3/lib-linux64/")

link_libraries("libsystemc.a")
link_libraries("libsystemc-ams.a")

project(tutorial)

add_executable(hello hello.cpp)
add_executable(module module.cpp)
add_executable(constructor constructor.cpp)
add_executable(has_process sc_has_process.cpp)
add_executable(sim_process simulation.cpp)
add_executable(simulation simulation.cpp)
add_executable(sim_stages sim_stages.cpp)
add_executable(sim_time sim_time.cpp)
add_executable(concurrency concurrency.cpp)
add_executable(event event.cpp)
add_executable(event_combined event_combined.cpp)
add_executable(delta_cycle delta_cycle.cpp)
add_executable(sensitivity sensitivity.cpp)
add_executable(initialization initialization.cpp)
add_executable(method method.cpp)
add_executable(event_queue event_queue.cpp)
add_executable(combined_event_queue combined_event_queue.cpp)
add_executable(mutex mutex.cpp)
add_executable(semaphore semaphore.cpp)
add_executable(fifo fifo.cpp)
add_executable(signal_rw signal_rw.cpp)
add_executable(signal_detect signal_detect.cpp)
add_executable(signal_many signal_many.cpp)
add_executable(signal_resolved signal_resolved.cpp)
add_executable(signal_bool signal_bool.cpp)
add_executable(buffer buffer.cpp)
add_executable(port port.cpp)
add_executable(export export.cpp)
add_executable(port2port port2port.cpp)
add_executable(port_specials port_specials.cpp)
add_executable(port_array port_array.cpp)
add_executable(primitive_channel primitive_channel.cpp)
add_executable(hierarchical_channel hierarchical_channel.cpp)
add_executable(trace trace.cpp)
add_executable(report report.cpp)
add_executable(custom_data_type custom_data_type.cpp)
add_executable(clock clock.cpp)
add_executable(cthread cthread.cpp)